# django-dramatiq-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dramatiq_dashboard/: apps.py  models.py  urls.py  utils.py  views.py
dramatiq_dashboard/static/dramatiq_dashboard/css/: theme.css
dramatiq_dashboard/templates/: archive.html  archive_day.html  archive_month.html  archive_year.html
dramatiq_dashboard/templates/dramatiq_dashboard/: base.html  detail.html  list.html
dramatiq_dashboard/templatetags/: getattr.py  timetags.py
