[tool.poetry]
name = "dramatiq_dashboard"
version = "0.1.1"
description = "Django dramatiq dashboard"
authors = ["99q"]

[tool.poetry.dependencies]
python = "^3.10"
django-dramatiq = "^0.11.6"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
black = "24.2.0"

[tool.poetry.extras]
test = [
  "pytest",
  "coverage",
  "pytest-cov",
  "pytest-django",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
